--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ figure {
     flex-direction: column;
     gap: 20px;
     align-items: center;
+    height: 300px;
 }
 
 .informationHeader {
@@ -109,13 +110,34 @@ figure {
     height: 120px;
     border: 3px solid #3882F6;
     border-radius: 10px;
-
-
-
 }
 
 .randomImages div {
     width: 120px;
 
     text-align: center;
+}
+
+/* Quote section: */
+
+aside {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    height: 300px;
+    padding: 80px 100px 70px 100px;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: light italic;
+    color: #1F2937;
+}
+
+.thor {
+    align-self: flex-end;
+    font-weight: 900;
 }
