--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    background-color: black;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -5,6 +9,7 @@ body {
     max-width: 960px;
     align-items: center;
     margin: auto;
+    background-color: white;
 
 }
 
@@ -78,6 +83,11 @@ img {
     font-weight: 700;
 }
 
+.header2ndRow button:hover {
+    background-color: chartreuse;
+
+}
+
 
 
 /* Random information section: */
@@ -88,6 +98,7 @@ figure {
     gap: 20px;
     align-items: center;
     height: 300px;
+
 }
 
 .informationHeader {
@@ -140,4 +151,63 @@ aside {
 .thor {
     align-self: flex-end;
     font-weight: 900;
+}
+
+/* Last (call to action) section: */
+
+section {
+    height: 240px;
+    box-sizing: border-box;
+    display: flex;
+
+}
+
+section .callSectionDiv {
+    background-color: #3882F6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 60px;
+    padding-left: 90px;
+    padding-right: 90px;
+    border-radius: 8px;
+    gap: 80px;
+
+}
+
+section button {
+    background-color: #3882F6;
+    color: #E5E7EB;
+    border: 2px solid white;
+    border-radius: 0.4em;
+    padding: 0.4em 2em 0.5em 2em;
+    color: white;
+    font-weight: 700;
+}
+
+section button:hover {
+    background-color: chartreuse;
+}
+
+
+.callTextArea {
+    color: #E5E7EB;
+}
+
+#callToAction1stLine {
+    font-size: 20px;
+
+}
+
+/* Footer: */
+
+footer {
+    display: flex;
+    background-color: #1F2937;
+    height: 70px;
+    box-sizing: border-box;
+    width: 960px;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
 }
