--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ header {
     max-width: 2000px;
     min-width: 400px;
     justify-content: space-between;
+    gap: 30px;
 }
 
 .textAndButton {
@@ -55,9 +56,9 @@ img {
 
 }
 
-.headerLogoText {
-    font-size: 24px;
-    color: #F9FAF8;
+.headerLogo img {
+    width: 108px;
+    height: 72px;
 }
 
 .heroText {
@@ -95,9 +96,10 @@ img {
 figure {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
     align-items: center;
     height: 300px;
+    padding-top: 30px;
 
 }
 
@@ -143,7 +145,7 @@ aside {
 }
 
 .quote {
-    font-size: 36px;
+    font-size: 32px;
     font-style: light italic;
     color: #1F2937;
 }
